# shanksbot-rs

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: README.md  lib.rs  main.rs
