[package]
name = "shanksbot-rs"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bachmann <mbachmann@bbmsoft.net>"]
description = "A rust implementation of the ShanksBot shown by Matt Parker in https://www.youtube.com/watch?v=DmfxIhmGPP4"
readme = "README.md"
repository = "https://github.com/babymotte/shanksbot-rs.git"
license = "MIT"
keywords = ["shanks", "prime", "reciprocals"]
categories = ["command-line-utilities", "mathematics"]

[[bin]]
name = "shanks"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false